stuck with the correct animation

--- a/src/app/acrostic-game/components/main-letter/main-letter.component.scss
+++ b/src/app/acrostic-game/components/main-letter/main-letter.component.scss
@@ -26,8 +26,8 @@
 
 .ox-text-small {
     @extend .ox-text;
-    width: 73%;
-    height: 63%;
+    width: 75%;
+    height: 65%;
 
 }
 
@@ -62,7 +62,7 @@
 }
 
 .word-container-small {
-    width:130vh;
+    width:110vh;
      height:8.5vh; 
      position: relative;
 }
